# biobert-longformer-test

./: DOES NOT WORK train-biobert-longformer.py  README.md  bigbird.py  environment.yml  get_pubmed_data.py  longformer.ipynb  mlm.txt  pubmed_val.txt  pyproject.toml  requirements.txt  run_job.sh  run_longformer.slurm  run_mlm.py  spec-file.txt  split_files.py  train-bio-longformer.py  train-roberta-longformer.py
wandb/: latest-run
wandb/run-20240805_180827-a51anugm/: run-a51anugm.wandb
wandb/run-20240805_180827-a51anugm/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240805_182056-d11ao1dl/: run-d11ao1dl.wandb
wandb/run-20240805_182056-d11ao1dl/files/: conda-environment.yaml  config.yaml  wandb-metadata.json
wandb/run-20240805_182459-5iwq0onz/: run-5iwq0onz.wandb
wandb/run-20240805_182459-5iwq0onz/files/: config.yaml  wandb-metadata.json
wandb/run-20240805_182741-vivn6pcj/: run-vivn6pcj.wandb
wandb/run-20240805_182741-vivn6pcj/files/: config.yaml  (+1 more)
wandb/run-20240805_182839-eyxs1gh6/: run-eyxs1gh6.wandb
wandb/run-20240805_182946-en4r9xq0/: run-en4r9xq0.wandb
wandb/run-20240805_183057-vov0ao0w/: run-vov0ao0w.wandb
wandb/run-20240805_183154-cbvstple/: run-cbvstple.wandb
wandb/run-20240805_183217-g0wl6lmo/: run-g0wl6lmo.wandb
wandb/run-20240805_183311-rg4js609/: run-rg4js609.wandb
wandb/run-20240805_183353-970srfab/: run-970srfab.wandb
wandb/run-20240805_183458-ypjly0i8/: run-ypjly0i8.wandb
wandb/run-20240805_183552-ve2kv6h9/: run-ve2kv6h9.wandb
wandb/run-20240805_232944-3n9n3tm3/: run-3n9n3tm3.wandb
(+29 files in other folders)
