[tool.poetry]
name = "biobert-longformer"
version = "0.1.0"
description = ""
authors = ["aaron"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.4.0"
transformers = "3.0.2"
six = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
